--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ include.path=\
     ${php.global.include.path}
 php.version=PHP_56
 project.license=netbeanslicenseheader
+project.licensePath=./nbproject/licenseheader.txt
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
