Reconstructed project structure.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,14 @@
 file.reference.GIgenerator-DML=../DML
+file.reference.ScriptGenerator-DML=../DML
+file.reference.ScriptGenerator-HTML5=../HTML5
+file.reference.ScriptGenerator-HTML5extended=../HTML5extended
+file.reference.ScriptGenerator-HTML5form=../HTML5form
 include.path=\
-    ${php.global.include.path}
+    ${php.global.include.path}:\
+    ${file.reference.ScriptGenerator-DML}:\
+    ${file.reference.ScriptGenerator-HTML5}:\
+    ${file.reference.ScriptGenerator-HTML5extended}:\
+    ${file.reference.ScriptGenerator-HTML5form}
 php.version=PHP_56
 project.license=netbeanslicenseheader
 project.licensePath=./nbproject/licenseheader.txt
